--- a/Code/src/CadastroVacina.html
+++ b/Code/src/CadastroVacina.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SGV - Menu Principal</title>
+    <title>SGV - Cadastro de vacina</title>
     <link rel="stylesheet" href="StyleIndex.css">
     <link rel="icon" href="img/vacina.png" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -26,38 +26,35 @@
             </div>
             <div class="col-md-8">
                 <div class="card-body">
-                    <h5 class="card-title" id="NOMEUSUARIO">Placeholder Usuario</h5>
+                    <h5 class="card-title" id="NOMEUSUARIO">Lucas S. M.</h5>
                     <p class="card-text">Sistema de Gerenciamento de Vacinas</p>
-                </div>
-                <div> <a name="" id="" class="btn btn-primary" href="login.html" role="button">Sair</a>
                 </div>
             </div>
         </div>
 
-        <div class="card" style="width: 18rem;">
-            <i id="ICONE_IMAGEM" class="fa-solid fa-syringe"></i>
-            <div class="card-body">
-                <a class="btn btn-primary" class="btn btn-primary" href="CadastroVacina.html" role="button">
-                    <h5 class="card-title">Cadastrar Vacina</h5>
-                    <p id="TextoCartao" class="card-text">Cadastre uma nova vacina.</p>
-                </a>
-            </div>
+        <div class="mb-3">
+            <label for="" class="form-label">Nome da vacina</label>
+            <input class="form-control" name="" id="" aria-describedby="" placeholder="Nome da vacina" />
         </div>
+
+        <div class="mb-3">
+            <label for="" class="form-label">Data de Aplicação</label>
+            <input class="form-control" name="" id="" aria-describedby="" placeholder="Data de Aplicação" />
+        </div>
+
+        <div class="mb-3">
+            <label for="" class="form-label">Data Próxima Aplicação</label>
+            <input class="form-control" name="" id="" aria-describedby="" placeholder="Data Próxima Aplicação" />
+        </div>
+
+        <button type="submit" class="btn btn-primary">
+            Confirmar Dados
+        </button>
         <div>
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th scope="col">Nome da vacina</th>
-                        <th scope="col">Lote</th>
-                        <th scope="col">Data de aplicação</th>
-                        <th scope="col">Data da próxima aplicação</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <!-- Os dados serão adicionados aqui pelo script -->
-                </tbody>
-            </table>
+            <a name="" id="" class="btn btn-primary" href="index.html" role="button">Voltar</a>
         </div>
+
+    </div>
 
 
 </body>
